Fix minor alignment bug

--- a/portfolio-project/src/components/navbar/navbar.scss
+++ b/portfolio-project/src/components/navbar/navbar.scss
@@ -23,6 +23,10 @@
 		margin: 0;
 		z-index: 2;
 
+		.menu-toggle:hover {
+			cursor: pointer;
+		}
+		
 		.logo h1 {
 			text-transform: uppercase;
 			font-size: 1.3rem;
@@ -49,11 +53,12 @@
 			line-height: 34px;
 			border: 4px solid $on-primary-color;
 
-			
-		}	
-		.menu-toggle-button:hover {
+			&:hover {
+				cursor: pointer;
 				transform: rotate(180deg);
-			}				
+			}
+			
+		}				
 	}
 
 	.navbar {
