--- a/portfolio-project/src/routes/root.scss
+++ b/portfolio-project/src/routes/root.scss
@@ -15,5 +15,6 @@
 	section {
 		max-width: 800px;
 		margin: 3rem auto;
+		padding: 0 3rem;
 	}
 }
